为滑动手势切换活动增加了动画，使其更加柔滑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">LTKA</string>
     <string name="action_settings">Settings</string>
 
+    <integer name="slide_duration">300</integer>
+
     <string name="article1_name">6个习惯让你理财成功一半</string>
     <string name="article1_author">佚名</string>
     <string name="article1_contents">
